--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
             
             <div class="space-y-8 text-stone-700 font-light text-xl leading-relaxed">
                 <p>Nesta data sagrada, as estrelas no céu e a vida na Terra se unem para celebrar o seu dia.</p>
-                <p>Obrigado por ser minha guia, minha Imperatriz e o centro da minha vida e principalmente por ser a minha <span class="lyra-dynamic-name font-bold" data-name="Lyra">Lyra</span>.</p>
+                <p>Obrigado por me dar o presente de conhecer você, por me dar seu amor e principalmente por ser a minha <span class="lyra-dynamic-name font-bold" data-name="Lyra">Lyra</span>.</p>
                 <p>Feliz aniversário meu amor.</p>
             </div>
             
